crates/keron-lang/tests/corpus/errors/parse/fn_named_arg_lhs_not_ident.keron
fn f(a: Int): Int { a }
val x: Int = f(1 + 2 = 3)
